# SDL_snake

./: .gitignore  CMakeLists.txt  README.md
include/: graphics_handler.h
include/game/: game_graphics.h  game_logic.h
src/: CMakeLists.txt  graphics_handler.cpp  main.cpp
src/game/: CMakeLists.txt  game_graphics.cpp  game_logic.cpp
